fix: #349 misaligned ui

--- a/src/user.css
+++ b/src/user.css
@@ -287,14 +287,14 @@ html {
 }
 
 .Root__main-view .main-topBar-container {
-  margin-left: calc(var(--left-sidebar-width) * -1) !important;
   margin-top: calc(-24px + var(--panel-gap) * -2);
   height: calc(24px + var(--panel-gap) * 2);
 }
 
 .main-topBar-container {
-  position: absolute !important;
-  width: 100vw !important;
+  position: fixed !important;
+  left: 0;
+  width: 100%;
   z-index: 5 !important;
   padding: 0;
 }
@@ -2018,12 +2018,6 @@ input:checked ~ .x-toggle-indicatorWrapper .x-toggle-indicator {
   padding-left: 6px;
 }
 
-.main-nowPlayingWidget-nowPlaying > .ellipsis-one-line,
-.main-trackInfo-container {
-  margin-left: 74px;
-  border-radius: var(--border-radius-1) !important;
-}
-
 .cover-art {
   background-color: transparent !important;
 }
@@ -2074,13 +2068,8 @@ input:checked ~ .x-toggle-indicatorWrapper .x-toggle-indicator {
 }
 
 .main-coverSlotCollapsed-container {
-  position: fixed;
-  top: auto;
-  left: 0px;
   width: 56px;
   height: 56px;
-  visibility: visible;
-  z-index: 99999 !important;
   border-radius: var(--border-radius-1) !important;
 }
 
